--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
+        android:name=".Class.Communication"
         android:allowBackup="true"
         android:icon="@drawable/icon_four"
         android:label="@string/app_name"
