HistoricActivity Completed Bug with Draw resolved When the game ends, the activty now is finished

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         </activity>
         <activity android:name=".Activity.GameSettingsActivity" />
         <activity android:name=".Activity.GameActivity" />
-        <activity android:name=".Activity.CreditosActivity"></activity>
+        <activity android:name=".Activity.CreditosActivity" />
+        <activity android:name=".Activity.HistoricActivity"></activity>
     </application>
 
 </manifest>
